<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Setting_F"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.yaar.shortvideoapp.Settings.Setting_F">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        >


        <View
            android:id="@+id/state_bar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="#000"
            />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/state_bar"
            android:layout_weight="1"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:background="@color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/d_bottom_gray_line">
                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="10dp"
                    android:scaleType="fitStart"
                    android:id="@+id/Goback"
                    android:tint="@color/black"
                    android:src="@drawable/ic_back"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_and_settings"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:id="@+id/txtLanguage"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/d_bottom_gray_line"
                android:textColor="@color/black"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:id="@+id/txtNotifcation"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/d_bottom_gray_line"
                android:textColor="@color/black"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:id="@+id/privacy_policy_txt"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/d_bottom_gray_line"
                android:textColor="@color/black"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:id="@+id/txtContactUs"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/d_bottom_gray_line"
                android:textColor="@color/black"
                android:padding="15dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_for_blue_tick"
                android:id="@+id/request_verification_txt"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/d_bottom_gray_line"
                android:textColor="@color/black"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:id="@+id/txttermsandcondio"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/d_bottom_gray_line"
                android:textColor="@color/black"
                android:padding="15dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/logout_txt"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/d_bottom_gray_line"
                android:textColor="@color/black"
                android:layout_marginVertical="20dp"
                android:padding="15dp"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
