<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redeem_rupees"
            android:textSize="19sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edt_redeem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_details"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/d_round_red25"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>