<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_wants_to_convert_into_rupees"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/d_round_red25"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/yes"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/d_round_gray25"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                />


        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>