<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="12dp"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/ivApplication"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/ivApplication" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/app_update_default_description"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvUpdateNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/orangered"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/app_update_positive_text"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

</LinearLayout>